Inital chat begin page

--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -4,9 +4,19 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.14"
 dependencies = [
+    "ddgs>=9.10.0",
     "edge-tts>=7.2.7",
     "fastapi[all]>=0.128.0",
+    "langchain>=1.2.6",
+    "langchain-openai>=1.1.7",
+    "motor>=3.7.1",
+    "pydub>=0.25.1",
+    "python-dotenv>=1.2.1",
+    "qdrant-client>=1.16.2",
     "requests>=2.32.5",
+    "slugify>=0.0.1",
+    "srt>=3.5.3",
+    "yt-dlp[default]>=2025.12.8",
 ]
 
 [dependency-groups]
