--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -7,4 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "jupyterlab>=4.5.2",
     "jupyterlab-night>=0.5.2",
+    "python-slugify>=8.0.4",
+    "srt>=3.5.3",
+    "yt-dlp[default]>=2025.12.8",
 ]
