--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -8,7 +8,9 @@ dependencies = [
     "edge-tts>=7.2.7",
     "fastapi[all]>=0.128.0",
     "langchain>=1.2.6",
+    "langchain-community>=0.4.1",
     "langchain-openai>=1.1.7",
+    "langchain-text-splitters>=1.1.0",
     "motor>=3.7.1",
     "pydub>=0.25.1",
     "python-dotenv>=1.2.1",
