--- a/app/package.json
+++ b/app/package.json
@@ -25,12 +25,16 @@
     "axios": "^1.13.2",
     "daisyui": "^5.5.14",
     "dayjs": "^1.11.19",
+    "dompurify": "^3.3.1",
+    "highlight.js": "^11.11.1",
     "leaflet": "^1.9.4",
+    "markdown-it": "^14.1.0",
     "pinia": "^3.0.4",
     "recordrtc": "^5.6.2",
     "slugify": "^1.6.6",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3",
+    "vue-virtual-scroller": "^2.0.0-beta.8",
     "vue3-apexcharts": "^1.10.0",
     "vue3-cookies": "^1.0.6"
   },
