--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "daisyui": "^5.5.14",
     "dayjs": "^1.11.19",
     "dompurify": "^3.3.1",
+    "github-markdown-css": "^5.8.1",
     "highlight.js": "^11.11.1",
     "leaflet": "^1.9.4",
     "markdown-it": "^14.1.0",
