--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.13"
 dependencies = [
     "jupyterlab>=4.5.2",
     "jupyterlab-night>=0.5.2",
+    "langchain>=1.2.7",
+    "langchain-openai>=1.1.7",
     "openai>=2.15.0",
     "python-slugify>=8.0.4",
     "qdrant-client>=1.16.2",
