Add TTS custom page

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,32 +20,22 @@ services:
       MONGO_INITDB_ROOT_USERNAME: mongo_user
       MONGO_INITDB_ROOT_PASSWORD: mongo_password
 
-  alarik:
-    image: ghcr.io/achtungsoftware/alarik:latest
+  minio:
+    image: quay.io/minio/minio:RELEASE.2025-04-22T22-12-26Z
+    container_name: ai-minio
     restart: unless-stopped
+    command: server /data --console-address ":401"
     ports:
-      - "400:8080"
+      - "400:9000"
+      - "401:401"
     environment:
-      - API_BASE_URL=http://localhost:400
-      - CONSOLE_BASE_URL=http://localhost:401
-      - ADMIN_USERNAME=alarik
-      - ADMIN_PASSWORD=alarik
-      - JWT=YOUR_SECURE_JWT_KEY
-      - ALLOW_ACCOUNT_CREATION=false
+      MINIO_ROOT_USER: admin
+      MINIO_ROOT_PASSWORD: adminpassword
+      TZ: Europe/Istanbul
     volumes:
-      - alarik-storage:/app/Storage
-
-  console:
-    image: ghcr.io/achtungsoftware/alarik-console:latest
-    restart: unless-stopped
-    ports:
-      - "401:3000"
-    environment:
-      - NUXT_PUBLIC_API_BASE_URL=http://localhost:400
-      - NUXT_PUBLIC_CONSOLE_BASE_URL=http://localhost:401
-      - NUXT_PUBLIC_ALLOW_ACCOUNT_CREATION=false
-    depends_on:
-      - alarik
+      - minio-data:/data
+      - /etc/localtime:/etc/localtime:ro
+      - /etc/timezone:/etc/timezone:ro
 
 volumes:
-  alarik-storage:
+  minio-data:
