--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.14"
 dependencies = [
+    "boto3>=1.42.35",
+    "boto3-stubs==1.42.35",
     "ddgs>=9.10.0",
     "edge-tts>=7.2.7",
     "fastapi[all]>=0.128.0",
@@ -17,6 +19,7 @@ dependencies = [
     "pydub>=0.25.1",
     "pypdf>=6.6.0",
     "python-dotenv>=1.2.1",
+    "python-multipart>=0.0.21",
     "python-slugify[unidecode]>=8.0.4",
     "qdrant-client>=1.16.2",
     "requests>=2.32.5",
