--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "boto3>=1.42.35",
+    "dotenv>=0.9.9",
     "jupyterlab>=4.5.2",
     "jupyterlab-night>=0.5.2",
     "langchain>=1.2.7",
