--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/vue-fontawesome": "^3.1.2",
     "@kyvg/vue3-notification": "^3.4.2",
     "@tailwindcss/vite": "^4.1.18",
+    "@vue/typescript-plugin": "^3.2.4",
     "@vueuse/core": "^14.1.0",
     "apexcharts": "^5.3.6",
     "axios": "^1.13.2",
@@ -36,7 +37,6 @@
     "vue": "^3.5.25",
     "vue-router": "^4.6.3",
     "vue-virtual-scroller": "^2.0.0-beta.8",
-    "vue3-apexcharts": "^1.10.0",
     "vue3-cookies": "^1.0.6"
   },
   "devDependencies": {
