--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,36 @@
 services:
+  api:
+    build:
+      context: ./api
+      dockerfile: Dockerfile
+    container_name: fastapi_api
+    ports:
+      - "8000:8000"
+    env_file:
+      - path: .env.docker
+        required: true
+    restart: unless-stopped
+    networks:
+      - sub-services
+    depends_on:
+      - qdrant
+
+  frontend:
+    build:
+      context: ./app
+      dockerfile: Dockerfile
+    container_name: vue_app
+    ports:
+      - "80:80"
+    restart: unless-stopped
+    networks:
+      - sub-services
+    env_file:
+      - path: .env.docker
+        required: true
+    volumes:
+      - ./app/nginx.conf:/etc/nginx/conf.d/default.conf
+
   qdrant:
     image: qdrant/qdrant:latest
     container_name: qdrant
@@ -8,7 +40,9 @@ services:
     volumes:
       - ./qdrant_data:/qdrant/storage
     restart: unless-stopped
-
+    networks:
+      - sub-services
+      
   mongodb:
     image: mongo:latest
     container_name: mongodb
@@ -19,6 +53,8 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: mongo_user
       MONGO_INITDB_ROOT_PASSWORD: mongo_password
+    networks:
+      - sub-services
 
   minio:
     image: quay.io/minio/minio:RELEASE.2025-04-22T22-12-26Z
@@ -36,6 +72,12 @@ services:
       - minio-data:/data
       - /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
+    networks:
+      - sub-services
 
 volumes:
   minio-data:
+
+networks:
+  sub-services:
+    driver: bridge
