--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     "slugify>=0.0.1",
     "srt>=3.5.3",
     "text-unidecode>=1.3",
-    "yt-dlp[default]>=2025.12.8",
+    "yt-dlp>=2026.2.4",
 ]
 
 [dependency-groups]
